# npower-sensors

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddCPM.cmake  CPMdependencies.cmake  ManualDependencies.cmake
etc/: sftp_cmd.sh  sync_dir.sh
include/: npower_monitor.hpp  npower_sensors.hpp  steps_monitor.hpp
scripts/: test_steps.sh
src/: demo.cpp  npower_monitor.cpp  npower_sensors.cpp  steps_monitor.cpp  test_pins.cpp
tests/: steps_test.cpp
